[tool.poetry]
name = "solana"
version = "0.35.1"
description = "Solana Python API"
authors = [
    "Michael Huang <michaelhly@gmail.com>",
    "Kevin Heavey <heaveykevin2@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/michaelhly/solanapy"
documentation = "https://michaelhly.github.io/solana-py/"
keywords = ["solana", "blockchain", "web3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "solana", from = "src" },
    { include = "spl", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
construct-typing = "^0.5.2"
httpx = ">=0.23.0"
typing-extensions = ">=4.2.0"
websockets = ">=9.0,<12.0"
solders = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
mypy = "^1.0"
pyyaml = "6.0.1"
pytest-docker = "^2.0.1"
requests = "2.28.1"
bump2version = "^1.0.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
asyncstdlib = "^3.10.2"
mkdocstrings = "^0.18.0"
mkdocs-material = "^8.2.1"
ruff = "^0.7.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "I",
    "ARG",
    "BLE",
    "C4",
    "SIM",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = ["D203", "I001"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["PLR0913", "RUF012"]
"src/solana/blockhash.py" = ["A003"]
"src/solana/rpc/api.py" = ["PLR0912"]
"tests/**/*.py" = ["D100", "D103", "ARG001", "PLR2004"]

[tool.pyright]
reportMissingModuleSource = false

[tool.mypy]
check_untyped_defs = true
