[project]
name = "solana"
version = "0.38.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "construct-typing>=0.6.2,<0.8.0",
    "typing-extensions>=4.5.0",
    "websockets>=14.0",
    "solders>=0.23,<0.28",
    "httpx2[http2]>=2.4.0",
    "aiolimiter>=1.1.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "mypy>=2.1",
    "pyyaml>=6.0.3",
    "bump2version>=1.0.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-xdist>=3.8.0",
    "asyncstdlib>=3.14.0",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.5",
    "mkdocs-material>=9.7.6",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solana", "src/spl"]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "-p no:anyio",
    "--cov",
    "--color=yes",
    "--cov-report=xml",
    "--cov-report=html",
    "--dist=loadscope",  # distribute tests by module
    "-vv",
    "-s",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
markers = ["integration: mark a test as a integration test."]
testpaths = ["src", "tests"]

[tool.ruff]
line-length = 120
# Assume Python 3.11 (lower bound of supported python versions)
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "I",
    "ARG",
    "BLE",
    "C4",
    "SIM",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = ["D203", "I001"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["PLR0913", "RUF012"]
"src/solana/blockhash.py" = ["A003"]
"src/solana/rpc/api.py" = ["PLR0912"]
"tests/**/*.py" = ["D100", "D103", "ARG001", "PLR2004"]

[tool.pyright]
reportMissingModuleSource = false

[tool.mypy]
check_untyped_defs = true
